--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "auto-apply-root",
-  "version": "1.0.0",
-  "description": "Root management for Auto-Apply system",
-  "scripts": {
-    "install-all": "npm install && cd backend && npm install && cd ../extension && npm install && cd ../selenium-runner && pip install -r requirements.txt && cd ../pattern-learning-api && npm install",
-    "start": "concurrently --kill-others \"npm run start-backend\" \"npm run start-extension\" \"npm run start-selenium\" \"npm run start-patterns\"",
-    "start-backend": "cd backend && node dist/server.js",
-    "start-extension": "cd extension && npm run dev",
-    "start-selenium": "cd selenium-runner && python -m uvicorn app:app --host 0.0.0.0 --port 8001",
-    "start-patterns": "cd pattern-learning-api && npm run dev"
-  },
-  "devDependencies": {
-    "concurrently": "^8.2.2"
-  }
+    "name": "autofill-backend",
+    "version": "1.0.0",
+    "description": "Resume parsing backend for autofill extension",
+    "main": "dist/server.js",
+    "scripts": {
+        "build": "tsc",
+        "dev": "ts-node-dev src/server.ts",
+        "start": "node dist/server.js"
+    },
+    "dependencies": {
+        "@types/node-fetch": "^2.6.13",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "mammoth": "^1.6.0",
+        "multer": "^1.4.5-lts.1",
+        "node-fetch": "^3.3.2",
+        "pdf-parse": "^1.1.1"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/multer": "^1.4.11",
+        "@types/node": "^20.10.5",
+        "@types/pdf-parse": "^1.1.4",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.3.3"
+    }
 }
